# sc-pose-utils

./: .gitignore  pyproject.toml
docs/: conventions.md  setup.md
sc_pose/examples/: charuco_check.py  check_opencv_reprojection.py  check_repojection.py  check_reprojection.py  soho_pandas_check.py  synthetic_check.py  vicon_check.py
sc_pose/examples/artifacts/: camera_poses.csv
sc_pose/examples/artifacts/offset/expm_001/: offset_results.json
sc_pose/examples/artifacts/reprojection_images/metadata/: calibration.yaml
sc_pose/math/: quaternion.py
sc_pose/metrics/: error.py
sc_pose/sensors/: camera.py  camera_projections.py
src/sc_pose/: __init__.py
src/sc_pose/examples/: charuco_check.py  check_offset.py  check_opencv_reprojection.py  check_opencv_reprojection_will.py  check_reprojection.py  check_reprojection_pete.py  check_reprojection_will.py  soho_pandas_check.py  synthetic_check.py  vicon_check.py
src/sc_pose/examples/artifacts/offset/expm_001/: vicon_data.csv
src/sc_pose/math/: quaternion.py
src/sc_pose/mathtils/: quaternion.py
src/sc_pose/metrics/: error.py  torch_error.py
src/sc_pose/sensors/: camera.py  camera_projections.py
