[build-system]
requires        = ["setuptools>=64", "wheel"]
build-backend   = "setuptools.build_meta"
[project]
name            = "sc_pose"
version         = "0.0.1"
dependencies    = [
                    "numpy<2.0",
                    "PyYAML",
                    "opencv-python",
                ]

[project.optional-dependencies]
metrics         = [
                    "torch",
                ]
examples        = [
                    "pandas",
                ]

[tool.setuptools.packages.find]
where           = ["src"]
include         = ["sc_pose*"]


# for setup, run at repo root:
# python -m pip install -e .

# may need to specific mamba path to python: ~/miniforge3/envs/neurals/bin/python -m pip install -e .

# example run:
# cd ~/agnc_repos/sc-pose-utils
# python -m pip install -e .

# to uninstall from environment:
# python -m pip uninstall sc_pose
